--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
     "react-native-gesture-handler": "^1.10.3",
-    "react-native-safe-area-context": "^3.3.0",
+    "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.5.0",
     "react-navigation": "^4.4.4"
   },
