--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.5.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.13.0",
     "react-navigation": "^4.4.4"
   },
   "devDependencies": {
