--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "prop-types": "^15.7.2",
     "react": "17.0.1",
     "react-native": "0.64.2",
-    "react-native-dropdown-picker": "^5.2.3",
+    "react-native-config": "^1.4.5",
+    "react-native-dropdown-picker": "^5.1.9",
     "react-native-geolocation-service": "^5.3.0-beta.3",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-modal": "^13.0.0",
