--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,4 +2,7 @@ rootProject.name = 'what_should_we_eat'
 apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
 include ':react-native-config'
+include ':react-native-splash-screen'
+
 project(':react-native-config').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-config/android')
+project(':react-native-splash-screen').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-splash-screen/android')
