--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-modal": "^13.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.5.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.13.0",
     "react-navigation": "^4.4.4"
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.15.0",
     "@babel/runtime": "^7.15.3",
+    "@bam.tech/react-native-make": "^3.0.3",
     "@react-native-community/eslint-config": "^3.0.0",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
