fix: 기타 오류 수정 및 identifier name 수정

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -133,7 +133,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.what_should_we_eat"
+        applicationId "com.todaymenu"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
