--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,8 +136,9 @@ android {
         applicationId "com.todaymenu"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
+        versionCode 2
         versionName "1.0.0"
+        setProperty("archivesBaseName", "todaymenu-v${versionName}c${versionCode}")
     }
     splits {
         abi {
