--- a/ios/what_should_we_eat/Info.plist
+++ b/ios/what_should_we_eat/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
@@ -36,11 +36,11 @@
 		</dict>
 	</dict>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Used to Location&amp;apos;s Info always for Using Beacon.</string>
+	<string>주변 맛집 정보를 찾기 위해 위치 정보가 필요합니다.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Used to Location&amp;apos;s Info always for Using Beacon.</string>
+	<string>주변 맛집 정보를 찾기 위해 위치 정보가 필요합니다.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Used to Location&amp;apos;s Info for Using Beacon when In Use.</string>
+	<string>주변 맛집 정보를 찾기 위해 위치 정보가 필요합니다.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>AntDesign.ttf</string>
